--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,17 +19,32 @@ theme:
     text: Roboto Mono
     code: Roboto Mono
   features:
-    - content.tooltips
-    - navigation.instant
-    - navigation.tabs
-    - navigation.tabs.sticky
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
     - content.code.copy
     - content.code.select
-    - navigation.expand
-    - navigation.path
-    - navigation.prune
+    - content.footnote.tooltips
+    - content.tabs.link
+    - content.tooltips
+    # - header.autohide
+    # - navigation.expand
+    # - navigation.footer
     - navigation.indexes
-    - toc.integrate
+    # - navigation.instant
+    # - navigation.instant.prefetch
+    # - navigation.instant.progress
+    # - navigation.prune
+    #- navigation.sections
+    #- navigation.tabs
+    # - navigation.tabs.sticky
+    #- navigation.top
+    #- navigation.tracking
+    #- search.highlight
+    #- search.share
+    - search.suggest
+    - toc.follow
   icon:
     logo: material/api
     repo: fontawesome/brands/github
@@ -47,7 +62,6 @@ nav:
   - Getting started:
     - getting-started/index.md
   - Reference:
-    - reference/index.md
     - pkg:
       - reference/pkg/cloudflare.md
       - reference/pkg/helpers.md
